[gd_scene load_steps=3 format=3 uid="uid://ct0caualvrgit"]

[ext_resource type="Script" path="res://scenes/SQLcontroller.gd" id="1_4jie1"]
[ext_resource type="FontFile" uid="uid://y7kkyve0lbfw" path="res://Assets/font/Burgery.ttf" id="2_7av51"]

[node name="chooseLvl" type="Control"]
layout_mode = 3
anchor_right = 1.736
anchor_bottom = 1.543
offset_right = 0.12793
offset_bottom = 0.135925
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_4jie1")

[node name="StartSpil" type="Button" parent="."]
layout_mode = 0
offset_left = 693.0
offset_top = 387.0
offset_right = 1196.0
offset_bottom = 650.0
theme_override_fonts/font = ExtResource("2_7av51")
theme_override_font_sizes/font_size = 75
text = "Start Spil"

[node name="Color1" type="TextEdit" parent="."]
layout_mode = 0
offset_left = 95.0
offset_top = 753.0
offset_right = 393.0
offset_bottom = 861.0

[node name="Color2" type="TextEdit" parent="."]
layout_mode = 0
offset_left = 1454.0
offset_top = 753.0
offset_right = 1752.0
offset_bottom = 861.0

[connection signal="button_down" from="StartSpil" to="." method="_on_start_spil_button_down"]
